--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "distro"]
 	path = distro
 	url = https://github.com/jhondge/distro.git
-	branch = R4
+	branch = upstream
 [submodule "extra/optnet"]
 	path = extra/optnet
 	url = https://github.com/fmassa/optimize-net.git
